criacao do script em JS

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <input type="text" id="cityInput" placeholder="Digite o nome da cidade...">
     <button id="getWeather">Obter Previsão</button>
     <div id="weatherInfo"></div>
+    <script src="script.js"></script>
 </body>
 </html>
